# DataForge-AI

./: .env  pyproject.toml  run_web.py
samples/: taizhou-ziduan.xlsx  taizhou_test.csv  test_output.csv  users.csv  vehicles_pool_demo.csv  泰州市出租车GPS数据20240802.csv  泰州市出租车GPS数据20240802_新版.csv  泰州市开放目录.xlsx  济宁市出租车GPS数据202408021349.csv  济宁市出租车GPS数据202408021349_新数据.csv  济宁市出租车GPS数据202408021349_新生成.csv  济宁市城际公交车GPS运行轨迹信息.xlsx  济宁市开放目录.xlsx
tests/: test_cli.py  test_csv_output.py  test_dashscope_native.py  test_generation_service.py  test_health.py  test_llm.py  test_mock_generator.py  test_models.py  test_qwen3_max.py  test_rule_engine.py  test_sample_profiler.py  test_sql_generator.py  test_value_pool.py  test_value_pool_live.py  test_web_app.py
