[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockagent"
version = "0.1.0"
description = "Intelligent sample-driven mock data generation and MySQL table creation system"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "typer>=0.12,<1.0",
    "faker>=24.0,<38.0",
    "sqlalchemy>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "pandas>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.0,<2.0",
    "fastapi>=0.104,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "python-multipart>=0.0.6,<1.0",
    "jinja2>=3.1,<4.0",
    "aiofiles>=23.0,<25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0"
]

[project.scripts]
mockagent = "mockagent.cli:app"

[tool.setuptools.packages.find]
include = ["mockagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
